--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
     <version>1.18.34</version>
     <scope>provided</scope>
 </dependency>
+
+    <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
+    </dependency>
 </dependencies>
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
